// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeInput should render a calendar 1`] = `
<div
  className="dt-input-container"
  id="dt-3"
>
  <div
    className="dt-inputs"
  >
    <div
      className="dt-input-date-wrapper"
    >
      <input
        autoComplete="off"
        className="dt-input dt-input-date"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="[0-9]{4}-[01]?[0-9]-[0-3]?[0-9]"
        placeholder="yyyy-MM-dd"
        type="text"
        value="2014-10-25"
      />
    </div>
    <input
      className="dt-input dt-input-time"
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]"
      placeholder="hh:mm"
      type="text"
      value="12:20"
    />
  </div>
  <div
    aria-hidden="true"
  >
    <div
      className="dt-dialog-backdrop"
      onClick={[Function]}
    />
    <dialog
      className="dt-dialog"
      open={true}
    >
      <div
        className="dt-calendar"
      >
        <div
          className="dt-toolbar"
        >
          <button
            className="dt-button dt-btn-prev-month"
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          />
          <span
            className="dt-current-date"
          >
            October 2014
          </span>
          <button
            className="dt-button dt-btn-next-month"
            onClick={[Function]}
            tabIndex="-1"
            type="button"
          />
        </div>
        <table
          className="dt-calendar-table"
        >
          <thead>
            <tr>
              <th
                className="dt-th"
              >
                Mon
              </th>
              <th
                className="dt-th"
              >
                Tue
              </th>
              <th
                className="dt-th"
              >
                Wed
              </th>
              <th
                className="dt-th"
              >
                Thu
              </th>
              <th
                className="dt-th"
              >
                Fri
              </th>
              <th
                className="dt-th"
              >
                Sat
              </th>
              <th
                className="dt-th"
              >
                Sun
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-prev-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  28
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-prev-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  29
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-prev-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  30
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  1
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  2
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  3
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  4
                </a>
              </td>
            </tr>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  5
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  6
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  7
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  8
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  9
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  10
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  11
                </a>
              </td>
            </tr>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  12
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  13
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  14
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  15
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  16
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  17
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  18
                </a>
              </td>
            </tr>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  19
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  20
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  21
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  22
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  23
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  24
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-current-day"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  25
                </a>
              </td>
            </tr>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  26
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  27
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  28
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  29
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  30
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  31
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  1
                </a>
              </td>
            </tr>
            <tr>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  2
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  3
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  4
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  5
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  6
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  7
                </a>
              </td>
              <td
                className="dt-day"
              >
                <a
                  className="dt-day-a dt-next-month"
                  onMouseDown={[Function]}
                  tabIndex="-1"
                >
                  8
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="dt-actions"
      >
        <button
          className="dt-btn dt-close"
          onClick={[Function]}
          tabIndex="-1"
          type="button"
        >
          Close
        </button>
      </div>
    </dialog>
  </div>
</div>
`;

exports[`DateTimeInput should render disabled inputs 1`] = `
<div
  className="dt-input-container"
  id="dt-5"
>
  <div
    className="dt-inputs"
  >
    <div
      className="dt-input-date-wrapper"
    >
      <input
        autoComplete="off"
        className="dt-input dt-input-date"
        disabled={true}
        pattern="[0-9]{4}-[01]?[0-9]-[0-3]?[0-9]"
        placeholder="yyyy-MM-dd"
        type="text"
        value="2014-10-25"
      />
    </div>
    <input
      className="dt-input dt-input-time"
      disabled={true}
      pattern="([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]"
      placeholder="hh:mm"
      type="text"
      value="12:20"
    />
  </div>
</div>
`;

exports[`DateTimeInput should render with non-empty date 1`] = `
<div
  className="dt-input-container"
  id="dt-1"
>
  <div
    className="dt-inputs"
  >
    <div
      className="dt-input-date-wrapper"
    >
      <input
        autoComplete="off"
        className="dt-input dt-input-date"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="[0-9]{4}-[01]?[0-9]-[0-3]?[0-9]"
        placeholder="yyyy-MM-dd"
        type="text"
        value="2014-10-25"
      />
    </div>
    <input
      className="dt-input dt-input-time"
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]"
      placeholder="hh:mm"
      type="text"
      value="12:20"
    />
  </div>
</div>
`;
